@@ -1,3 +1,9 @@
+-
+
+    Bug fixed: NameError when checking for emails in and nothing to
+    download. Thanks Luciano (Real#0743)
+    
+
 - 0.9.2
 
     Bug fixed: When accepting multipart emails and html2safehtml is
